# workloads

./: README.md
3d/: CMakeLists.txt  LICENSE  README.MD
3d/cmake/: compileShaders.cmake
3d/examples/: CMakeLists.txt  common.cpp  common.h
3d/examples/basic/: main.cpp
3d/examples/basic/shaders/glsl/: simple.frag  simple.vert
3d/examples/basic/shaders/glsl-v/: simple.frag  simple.vert
3d/examples/common/: Model.cpp  Model.h
3d/examples/common/shaders/glsl/: gltf.vert
3d/examples/common/shaders/glsl-v/: default.frag  gltf.frag
3d/examples/just_attributes/: main.cpp
3d/examples/just_attributes/shaders/glsl/: attributes.frag  attributes.vert
3d/examples/just_attributes/shaders/glsl-v/: attributes.frag  attributes.vert
3d/examples/model/: main.cpp
3d/examples/texture/: main.cpp
3d/examples/texture/shaders/glsl/: texture.frag  texture.vert
3d/examples/texture/shaders/glsl-v/: texture.frag  texture.vert
3d/examples/uniform_buffer/: main.cpp
3d/examples/uniform_buffer/shaders/glsl/: ubo.frag  ubo.vert
3d/examples/uniform_buffer/shaders/glsl-v/: ubo.frag  ubo.vert
3d/include/: RenderInterface.h  keycodes.h
3d/source/: CMakeLists.txt  GuiInterface.h  RenderInterface.cpp  WindowInterface.h  common.cpp  common.h
3d/source/glfw_window_impl/: GLFWWindowImpl.cpp  GLFWWindowImpl.h
3d/source/imgui_impl/: IGGuiImpl.cpp  IGGuiImpl.h
3d/source/internal_shaders/: uioverlay.vert
3d/source/opengl_impl/: OGLBuffer.cpp  OGLBuffer.h  OGLCommandRecorder.cpp  OGLCommandRecorder.h  OGLDebug.h  OGLDescriptors.cpp  OGLDescriptors.h  OGLFrameBuffer.cpp  OGLFrameBuffer.h  OGLPipeline.cpp  OGLPipeline.h  OGLRenderImpl.cpp  OGLRenderImpl.h  OGLRenderJob.cpp  OGLRenderJob.h  OGLSampler.cpp  OGLSampler.h  OGLShaderManager.cpp  OGLShaderManager.h  OGLTexture.cpp  OGLTexture.h
3d/source/vulkan_impl/: RenderJob.cpp  RenderJob.h  VulkanCommandRecorder.cpp  VulkanCommandRecorder.h  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanDevice.cpp  VulkanDevice.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQueueManager.cpp  VulkanQueueManager.h  VulkanRenderImpl.cpp  VulkanRenderImpl.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShaderManager.cpp  VulkanShaderManager.h  VulkanSwapChain.cpp  VulkanSwapChain.h
3d/source/vulkan_impl/util/: UniversalContainer.h  VmaImplementation.cpp  VulkanDebug.cpp  VulkanDebug.h  VulkanInitializers.h  macro.h
blender-docker/: example.sh  example_2.sh  script.py
intel/: README.md
webloadgenerator/: run.sh
